--- a/build.xml
+++ b/build.xml
@@ -6,7 +6,7 @@
 
     <target name="compile">
         <mkdir dir="build/classes"/>
-        <javac srcdir="src" destdir="build/classes"/>
+        <javac srcdir="src" destdir="build/classes" includeantruntime="true"/>
     </target>
 
     <target name="jar" depends="compile">
